# fritzbox-info-cli

./: Cargo.toml
src/: json_structure.rs  lib.rs  main.rs
