[package]
name = "fritzbox_presence"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.2"
reqwest = "0.12.23"
md5 = "0.8.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde-aux = "4.7.0"
clap = { version = "4.5.47", features = ["derive"] }
